--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,15 @@
 {
-    "name": "wanpeninsula/ali-drop",
-    "description": "AliExpress Dropshipping API",
+    "name": "pennycodes/alidrop",
+    "description": "AliExpress DropShipping API",
+    "version": "1.0.0",
+    "keywords": ["alidrop", "alidropshipping", "alidropship", "alidropshiping", "alidropshipping.com", "alidropship.com", "alidropshiping.com", "alidropshipping plugin", "alidropship plugin", "alidropshiping plugin", "alidropshipping.com plugin", "alidropship.com plugin", "alidropshiping.com plugin", "alidropshipping api", "alidropship api", "alidropshiping api", "alidropshipping.com api", "alidropship.com api", "alidropshiping.com api"],
+    "homepage": "https://github.com/brvhprince/AliDrop",
+    "readme": "README.md",
     "type": "library",
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Wanpeninsula\\AliDrop\\": "src/",
-            "AESDK\\": "lib/"
+            "Pennycodes\\AliDrop\\": "src/"
         }
     },
     "authors": [
